fix flicker on chrome
disabled pointer on whole page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,13 +1,12 @@
+/* -------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------- */
+
 /* BODY */
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: auto;
   line-height: 1em;
-  cursor: pointer;
-}
-
-/* Animated background */
-body {
+  /* Animated background */
   background: url('/ttt.png') 0 0 repeat;
   -webkit-animation: animate_background 2s linear 0s infinite;
   -moz-animation: animate_background 2s linear 0s infinite;
@@ -48,17 +47,16 @@ body {
   } 
 }
 
-/* Main colour and style pallete for content*/
-nav, .sidebar-left, .content {
-  background-color: #212121;
-  color: rgba(189, 189, 189, 0.87);
-  border-radius: 1em;
-}
+/* -------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------- */
+
+/* MISC ITEMS */
 
 /* Hover items on content area */
 .sidebar-left a:hover, .dropdown-content a:hover, nav a:hover, footer a:hover {
   color: #FF851B;
   transition: color 0.3s;
+  cursor: pointer;
 }
 
 /* Active items on content area */
@@ -78,6 +76,9 @@ h1, h2, h3 {
   margin: 0px;
 }
 
+/* -------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------- */
+
 /* AVATAR */
 .avatar {
   grid-area: avatar;
@@ -91,21 +92,29 @@ h1, h2, h3 {
   padding: auto;
 }
 
+/* -------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------- */
+
 /* HEADER */
 header {
   grid-area: header;
-  /*background-color: #212121;
-  border-radius: 32px;*/
   color: rgba(189, 189, 189, 0.87);
   text-align: center;
   margin-bottom: 1em;
   margin-top: 0.5em;
 }
 
+/* -------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------- */
+
 /* HORIZONTAL NAVIGATION */
 nav {
   grid-area: navbar;
+  background-color: #212121;
+  color: rgba(189, 189, 189, 0.87);
+  border-radius: 1em;
   text-align: center;
+  user-select: none;
 }
 
 nav ul {
@@ -129,12 +138,19 @@ nav a {
   padding: 1em;
 }
 
+/* -------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------- */
+
 /* SIDE NAVIGATION */
 .sidebar-left {
   grid-area: side;
+  background-color: #212121;
+  color: rgba(189, 189, 189, 0.87);
+  border-radius: 1em;
   text-align: left;
   padding: 1em;
   line-height: 1.5em;
+  user-select: none;
 }
 
 .sidebar-left ul {
@@ -185,12 +201,23 @@ nav a {
   display: block;
 }
 
-/* MAIN BODY */
-.content {
+/* -------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------- */
+
+/* MAIN BODY CONTENT */
+.content, .about-me-content, .contact-content, .steroid-calc-content, .gallery-content, .links-content {
   grid-area: body;
   padding: 1em;
   text-align: left;
+  line-height: auto;
+  border-radius: 1em;
+  box-sizing: border-box;
+  background-color: #212121;
+  color: rgba(189, 189, 189, 0.87);
 }
+
+/* -------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------- */
 
 /* FOOTER */
 footer {
@@ -205,6 +232,9 @@ footer a {
   color: #BDBDBD;
   transition: color 0.5s;
 }
+
+/* -------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------- */
 
 /* GRID DEFINITIONS */
 .grid {
@@ -221,8 +251,6 @@ footer a {
                        "content"
                        "footer";
  }
-
-
 
  .subgrid {
   display: grid;
@@ -257,7 +285,8 @@ footer a {
                        "plot plot plot";
 }
 
-
+/* -------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------- */
 
 /* CONTACT FORM */
 /* Style inputs with type="text", select elements and textareas */
@@ -296,6 +325,9 @@ input[type=submit]:hover {
   border-radius: 32px;
   padding: 20px;
 }
+
+/* -------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------- */
 
 /* STEROID-CALC */
 .small-12 {
@@ -541,15 +573,4 @@ select, .dose{
 
 .form4 {
   grid-area: plot;
-}
-
-.steroid-calc-content {
-  grid-area: body;
-  padding: 1em;
-  text-align: left;
-  line-height: auto;
-  box-sizing: border-box;
-  background-color: #212121;
-  color: rgba(189, 189, 189, 0.87);
-  border-radius: 1em;
 }
